# Masters-DOD

./: CMakeLists.txt  Report.docx  ReportTopics.txt  ToDoList  ~$Report.docx  ~WRL2348.tmp
Project/: CMakeLists.txt  main.cpp  rendering.cpp  rendering.hpp
Project/Shaders/Line/: run.bat  shader.frag  shader.vert  vert.spv
Project/Shaders/Sphere/: frag.spv  run.bat  shader.frag
Project/Shaders/Sphere/2D/: shader2D.vert  vert.spv
Project/Shaders/Sphere/3D/: shader3D.vert  vert.spv
